Replaced Class#newInstance with Class#getDeclaredConstructor().newInstance