@@ -7,6 +7,7 @@ import systems.reformcloud.reformcloud2.executor.api.common.network.packet.query
 import systems.reformcloud.reformcloud2.executor.api.common.utility.list.Streams;
 
 import javax.annotation.Nonnull;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -29,9 +30,9 @@ public final class DefaultPacketHandler implements PacketHandler {
     @Override
     public void registerHandler(Class<? extends NetworkHandler> networkHandler) {
         try {
-            NetworkHandler handler = networkHandler.newInstance();
+            NetworkHandler handler = networkHandler.getDeclaredConstructor().newInstance();
             registerHandler(handler);
-        } catch (final InstantiationException | IllegalAccessException ex) {
+        } catch (final IllegalAccessException | NoSuchMethodException | InvocationTargetException | InstantiationException ex) {
             ex.printStackTrace();
         }
     }
